client: Fix users list disappear on mobile
When on mobile galene.css tunes #left-sidebar to appear/disappear
when #sidebarCollapse is tapped. It indeed works ok when in chat mode,
but when in video mode, when #sidebarCollapse is tapped the only thing
that happens is that only "Galène" title of left sidebar window appears
- the other content of that window below the title is completely black
and even more: I only see title bar of the whole screen being scrolled
to the right, but the main area with videos is not scrolled to the
right.

That happens because video is overlaying left sidebar.

-> Fix that by setting z-index on #left-sidebar.active so that it always
comes on top of video.

--- a/static/galene.css
+++ b/static/galene.css
@@ -1276,6 +1276,8 @@ header .collapse:hover {
     #left-sidebar.active {
         min-width: 200px;
         max-width: 200px;
+        /* on top of video peers */
+        z-index: 1002;
     }
 
     #left-sidebar {
